# macrohero

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.coolify.yml  docker-compose.yaml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: backtest_strategy_agent.py
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
api/alembic/: env.py
api/alembic/versions/: c03170a03cb8_initial_schema.py
api/src/macrohero/: config.py  main.py
api/src/macrohero/auth/: clerk.py
api/src/macrohero/chat/: agent.py  search.py  title.py
api/src/macrohero/db/: base.py  models.py  session.py
api/src/macrohero/fx/: __init__.py  data.py  projection.py  tool.py
api/src/macrohero/routers/: chat.py  me.py
api/src/macrohero/schemas/: chat.py  me.py
api/src/macrohero/scripts/: backfill_titles.py
api/tests/: test_chat_agent.py  test_config_massive.py  test_schemas_chat_part.py
api/tests/chat/: test_agent_tool_flow.py  test_search.py
api/tests/fx/: test_data_cache.py  test_data_massive.py  test_factors.py  test_projection.py  test_tool.py
apps/api/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/scripts/: cross-check-against-py.ts
apps/api/src/: db.ts  env.ts  index.ts  server.ts
apps/api/tests/: env.test.ts
apps/numerics/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
apps/numerics/scripts/: generate_golden_fixtures.py
apps/numerics/src/numerics/: config.py  factors.py  main.py  projection_service.py  routes.py
apps/numerics/tests/: conftest.py  test_config.py  test_data_cache.py  test_data_massive.py  test_factors.py  test_golden_fixtures.py  test_projection.py  test_projection_service.py  test_routes.py
apps/numerics/tests/fixtures/golden/: scenario_01.json  scenario_02.json  scenario_03.json  scenario_04.json  scenario_05.json  scenario_06.json  scenario_07.json  scenario_08.json  scenario_09.json  scenario_10.json  scenario_11.json  scenario_12.json  scenario_13.json  scenario_14.json  scenario_15.json  scenario_16.json  scenario_17.json  scenario_18.json  scenario_19.json  scenario_20.json
apps/web/: .env.example  Dockerfile  proxy.ts
apps/web/app/: globals.css  (+1 more)
components/: article_card.py  chat_ui.py  layout.py  market_cards.py
db/: migrate.py  pool.py
docs/: MIGRATION_NOTES.md
modules/: landing.py
prompts/: market_agent.md
services/: backtest_service.py  chat_service.py  classify_service.py  daily_enrichment.py  enrich_service.py  feed_scheduler.py  market_data_service.py  news_service.py  scraper_service.py  search_service.py
sql/: schema.sql
tests/: capture_video.py  test_playwright.py
utils/: auth.py  config.py  rate_limit.py
web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
web/app/: globals.css
web/components/: reveal.tsx  scenario-card.tsx  timezone-detector.tsx
web/lib/: news.ts
(+57 files in other folders)
