[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["db", "services", "components", "utils", "agents", "modules"]

[project]
name = "macrohero"
version = "0.1.0"
description = "Macro-economic news analysis platform powered by FastHTML and LangChain"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.12",
    "monsterui>=0.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "feedparser>=6.0",
    "newspaper4k>=0.9",
    "tavily-python>=0.5",
    "markdown>=3.0",
    "bcrypt>=4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "httpx>=0.27",
    "numpy>=1.24",
]
